--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="notification"> </div>
         <div class="weather-container">
             <div class="weather-icon">
-                <img src="icons/unknown.png" alt="">
+                <img src="D:\web d project\once again\real time weather\icons\unknown.png" alt="">
             </div>
             <div class="temperature-value">
                 <p>- °<span>C</span></p>
@@ -32,4 +32,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-
